# bazel-playground

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  deps.bzl  go.mod  go.sum  version.bzl
api/petstore/v1/: BUILD.bazel  user.proto
assets/scripts/: server.sh
build_image/: Dockerfile
cmd/busybox/: BUILD.bazel  main.go
cmd/greeter/: BUILD.bazel  cmd_greet.go  cmd_super_greet.go  command.go
docs/: README.md
docs/steps/: 0_env_set_up.md  0_set_up_everything.md  1_bazel_initial_set_up.md  1_setup_bazel.md  2_create_archive.md  3_create_docker_packaging.md
internal/resource/: BUILD.bazel  resource_test.go
internal/resource/testdata/: test.yaml
internal/secret/: BUILD.bazel  secret.go  secret_test.go
internal/version/: version.go
pkg/api/petstore/impl/: BUILD.bazel  user.go
pkg/entity/: BUILD.bazel  entity.go  entity_test.go
pkg/entity/sub/: BUILD.bazel  subentity.go  subentity_test.go
pkg/pet/: BUILD.bazel  pet.proto  pet_get.go
pkg/repository/: BUILD.bazel  entity.go  entity_test.go
