load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:version.bzl", "VERSION")

go_library(
    name = "busybox_lib",
    srcs = ["main.go"],
    importpath = "github.com/dgodyna/bazel-playground/cmd/busybox",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/version",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
    ],
)

go_binary(
    name = "busybox",
    embed = [":busybox_lib"],
    visibility = ["//visibility:public"],
    x_defs = {"github.com/dgodyna/bazel-playground/internal/version.version": VERSION},
)
