load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "secret",
    srcs = ["secret.go"],
    importpath = "github.com/dgodyna/bazel-playground/internal/secret",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "secret_test",
    srcs = ["secret_test.go"],
    embed = [":secret"],
)
