load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "pet_proto",
    srcs = ["pet.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "pet_go_proto",
    importpath = "github.com/dgodyna/bazel-playground/pkg/pet",
    proto = ":pet_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "pet",
    srcs = ["pet_get.go"],
    embed = [":pet_go_proto"],
    importpath = "github.com/dgodyna/bazel-playground/pkg/pet",
    visibility = ["//visibility:public"],
)
