load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")
load("@io_bazel_rules_go//proto/wkt:well_known_types.bzl", "PROTO_RUNTIME_DEPS", "WELL_KNOWN_TYPES_APIV2")

proto_library(
    name = "v1_proto",
    srcs = ["user.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "v1_go_proto",
    importpath = "github.com/dgodyna/bazel-playground/api/petstore/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "petstore",
    embed = [":v1_go_proto"],
    importpath = "github.com/dgodyna/bazel-playground/api/petstore/v1",
    visibility = ["//visibility:public"],
)
