load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "impl",
    srcs = [
        "doc.go",
        "user.go",
    ],
    importpath = "github.com/dgodyna/bazel-playground/pkg/api/petstore/impl",
    visibility = ["//visibility:public"],
    deps = [
        "//api/petstore/v1:petstore",
    ],
)
